# AdhikarAI

./: .gitignore  AGENTS.md  README.md  package.json
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/admin_panel/: __init__.py  queries.py  scheme_drafts.py
backend/app/agent/: __init__.py  completeness.py  extraction.py  graph.py  life_events.py  question_selection.py  result_formatter.py  state.py
backend/app/cli/: __init__.py  local_e2e.py  main.py
backend/app/core/: config.py  errors.py  security.py
backend/app/dashboard/: __init__.py  audit.py  beneficiaries.py  bulk_eligibility.py  rbac.py
backend/app/db/: session.py
backend/app/rate_limit/: __init__.py  service.py
backend/app/schemas/: admin.py  agent.py  common.py  document_check.py  household.py  ingestion.py  match.py  phase4.py  phase5.py  profile.py  scheme.py  translation.py  tts.py  voice.py
backend/app/seeds/: central_schemes.v1.json
backend/app/services/: households.py  phase4.py  profiles.py  schemes.py  seeds.py
backend/app/translation/: __init__.py  cache.py  client.py  language_detection.py  transliteration.py
backend/app/tts/: __init__.py  cache.py  client.py  voices.py
backend/app/voice/: __init__.py  audio_utils.py  localized_messages.py  pipeline.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_scheme_api.py  test_expiry_checker.py  test_faiss_search.py  test_phase2_agent_routes.py  test_phase3_voice_routes.py  test_phase4_routes.py  test_profile_match_api.py
docs/: README.md  (+8 more)
(+198 files in other folders)
