[project]
name = "adhikarai-backend"
version = "0.1.0"
description = "AdhikarAI Phase 1 FastAPI eligibility engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "experta>=1.9",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "apscheduler>=3.10",
    "typer>=0.12",
    "rich>=13.7",
    "orjson>=3.10",
    "python-multipart>=0.0.9",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-groq>=0.2",
    "redis[hiredis]>=5.0",
    "websockets>=12.0",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.scripts]
adhikarai-admin = "app.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
